# nf-processor-agent

./: README.md  launch.json  main.py  pyproject.toml
config/: configuration.py
data/processed/: notas_fiscais.db
logs/: logger.py
src/: constants.py
src/agents/: chat_agent.py  nf_agent.py
src/api/: simulation_sefaz.py
src/database/: connection.py  models.py
src/parsers/: rps_parser.py  xml_parser.py  xml_parser_llm.py
src/prompts/: chat_agent_prompt.py  fiscal_validation_prompt.py  xml_extractor_prompt.py
src/tools/: calculate_tool.py  find_invoice_by_number_tool.py  geral_stats_tool.py  get_errors_invoices_tool.py  list_invoices_tool.py
src/validators/calculators/: tax_calculator.py
src/validators/cfops/: cfop_natop.json  cfop_validator.py  script.py
src/validators/cpf_cnpj/: document_validator.py
src/validators/csts/: cfop_optimized.py  cfop_rules_generated.json  cfop_rules_optimized.json  cfops_rules.json  csosn.json  cst_icms.json  cst_ipi.json  cst_pis_cofins.json  cst_validator.py  origem.json
src/validators/ncm/: ncm_validator.py
